Fix crash in data fetching and aggregation scripts in reports

Summary:
BUG:392753
FIXED-IN:3.1.1

NOTE: Reports can still crash in Design view until 393705 (ORDER BY) is fixed (3.2).

Test Plan:
Test 1. Open report from https://bugs.kde.org/show_bug.cgi?id=392753#c0

Test 2. Create report field with data sources like these and try it:

```
=field.max("....")
=field.min("....")
=field.sum("....")
=field.avg("....")
=field.count("....")
```

Reviewers: piggz

Reviewed By: piggz

Subscribers: Kexi-Devel-list

Tags: #kexi

Differential Revision: https://phabricator.kde.org/D12868